--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,7 @@
 
   <string name="phone_number_activity_info">TYPE YOUR PHONE NUMBER</string>
   <string name="title_activity_phone_number">Phone number</string>
-  <string name="confirmation_code_actionbar">Done</string>
+  <string name="confirmation_code_actionbar">Next</string>
 
 
 
