--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,7 +29,6 @@
   <string name="confirmation_code_actionbar">Next</string>
 
 
-
   <string name="title_activity_sms_code">SMS Code</string>
   <string name="enter_sms_code">Enter the SMS code</string>
   <string name="enter_sms_code_desc">Enter the SMS code you have received to register in the PayPro app</string>
@@ -61,5 +60,8 @@
   <string name="title_send">Send Money</string>
   <string name="title_account">Account</string>
   <string name="title_settings">Settings</string>
+
+  <string name="info_tab_title">Info</string>
+  <string name="transactions_tab_title">Transactions</string>
 
 </resources>
