--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,6 +68,12 @@
   <string name="bits_unit">μ₿</string>
 
   <string name="bitcoin_account_header">BITCOIN ACCOUNT</string>
+
+  <string name="qrcode_label">QR Code: </string>
+  <string name="address_label">Address: </string>
+
+
   <string name="latest_transactions_header">LATEST TRANSACTIONS</string>
+
 
 </resources>
