balance bug solved

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,7 +65,7 @@
   <string name="transactions_tab_title">Transactions</string>
 
   <string name="bits">Bits</string>
-  <string name="bits_unit">μ₿</string>
+  <string name="balance_empty">μ₿ -.--</string>
 
   <string name="bitcoin_account_header">BITCOIN ACCOUNT</string>
 
