--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,5 +69,9 @@
 
   <string name="bitcoin_account_header">BITCOIN ACCOUNT</string>
   <string name="latest_transactions_header">LATEST TRANSACTIONS</string>
-
+    <string name="passcode">Passcode</string>
+  <string name="tell_a_friend">Tell a friend</string>
+  <string name="info">Info</string>
+  <string name="todo">TODO</string>
+  <string name="nickname">Nickname</string>
 </resources>
