--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,4 +75,5 @@
   <string name="todo">TODO</string>
   <string name="done">Done</string>
   <string name="nickname">Nickname</string>
+  <string name="edit">Edit</string>
 </resources>
