permission denied and empty list view

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,4 +74,8 @@
   <string name="info">Info</string>
   <string name="todo">TODO</string>
   <string name="nickname">Nickname</string>
+
+  <string name="permission_denied_text">To send money to your friends, allow PayPro to acces your contacts.</string>
+  <string name="empty_contacts_list">Your contacts list is empty</string>
+
 </resources>
