--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,4 +94,7 @@
   <string name="amount_placeholder">"000.00</string>
   <string name="private_msg_placeholder">Private message for beneficiary</string>
 
+  <string name="invite_title">Invite someone to PayPro</string>
+  <string name="introduce_address">Introduce Bitcoin Address</string>
+
 </resources>
