--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -106,4 +106,7 @@
 
   <string name="destinatary_not_available">Destinatary name not available</string>
 
+
+  <string name="choose_contact">Choose contact</string>
+
 </resources>
