--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,9 +92,9 @@
   <string name="bits_lowercase">bits</string>
 
   <string name="amount_placeholder">"000.00</string>
-  <string name="private_msg_placeholder">Private message for beneficiary</string>
+  <string name="private_msg_placeholder">Message for beneficiary</string>
 
-  <string name="bitcoin_address">Bitcoin Addr:</string>
+  <string name="bitcoin_address">Addr:</string>
   <string name="hint_bitcoin_address">1BvBMSEYstWetqTFn5Au4m4GFg7xJaNVN2</string>
 
   <string name="ready_to_send">READY TO SEND</string>
@@ -108,5 +108,9 @@
 
 
   <string name="choose_contact">Choose contact</string>
+
+  <string name="amount_title">Amount</string>
+  <string name="send_title">Send</string>
+  <string name="bitcoin_address_title">Bitcoin Address</string>
 
 </resources>
