--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -113,4 +113,6 @@
   <string name="send_title">Send</string>
   <string name="bitcoin_address_title">Bitcoin Address</string>
 
+  <string name="sms_msg">Hi! I am trying to send you money via PayPro but I see you don\'t have an account. Can you download it so you can instantly have the money? It\'s available for iOS and Android :)</string>
+
 </resources>
