bitcoin symbol is now a vector asset and showQrCodeFragment improved

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,7 +65,7 @@
   <string name="transactions_tab_title">Transactions</string>
 
   <string name="bits">Bits</string>
-  <string name="balance_empty">μ₿ -.--</string>
+  <string name="balance_empty">-.--</string>
 
   <string name="bitcoin_account_header">BITCOIN ACCOUNT</string>
 
@@ -81,4 +81,9 @@
   <string name="done">Done</string>
   <string name="nickname">Nickname</string>
   <string name="edit">Edit</string>
+
+  <string name="micro">μ</string>
+
+  <string name="show_qr_title">QR Code</string>
+
 </resources>
