--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
   <string name="phone_number_activity_info">TYPE YOUR PHONE NUMBER</string>
   <string name="title_activity_phone_number">Phone number</string>
   <string name="confirmation_code_actionbar">Next</string>
+  <string name="next">Next</string>
 
 
   <string name="title_activity_sms_code">SMS Code</string>
@@ -103,6 +104,8 @@
   <string name="ready_to_send">READY TO SEND</string>
   <string name="to">TO</string>
 
+  <string name="cell_description">Cell description which explains the consequences of the above action.</string>
+
   <string name="swipe_to_send">Swipe to send</string>
 
   <string name="you_rock">You rock!</string>
@@ -116,6 +119,7 @@
   <string name="send_title">Send</string>
   <string name="bitcoin_address_title">Bitcoin Address</string>
   <string name="account_title">Account</string>
+  <string name="contacts_title">Contacts</string>
 
   <string name="sms_msg">Hi! I am trying to send you money via PayPro but I see you don\'t have an account. Can you download it so you can instantly have the money? It\'s available for iOS and Android :)</string>
 
