--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string name="app_name" translatable="false">PayProApp</string>
+  <string name="app_name" translatable="false">PayPro</string>
 
   <string name="phone_code" translatable="false">+%s</string>
   <string name="country_name_and_code" translatable="false">%1$s (%2$s)</string>
