--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,14 +2,9 @@
 <resources>
   <string name="app_name" translatable="false">PayPro</string>
 
-  <string name="phone_code" translatable="false">+%s</string>
-  <string name="country_name_and_code" translatable="false">%1$s (%2$s)</string>
   <string name="search_hint">Search&#8230;</string>
   <string name="no_result_found">No result found</string>
   <string name="select_country">Select county</string>
-  <string name="country_code_and_phone_code">(%1$s) +%2$s</string>
-  <string name="country_full_name_and_phone_code">%1$s +%2$s</string>
-  <string name="error_unregister_carrier_number">EditText for carrier number is not registered. Register it using registerPhoneNumberTextView() before getFullNumber() or setFullNumber().</string>
 
   <string name="continue_button">Continue</string>
 
@@ -25,7 +20,6 @@
   <string name="action_search">action_search</string>
 
   <string name="phone_number_activity_info">TYPE YOUR PHONE NUMBER</string>
-  <string name="title_activity_phone_number">Phone number</string>
   <string name="confirmation_code_actionbar">Next</string>
   <string name="next">Next</string>
 
@@ -61,6 +55,7 @@
   <string name="title_send">Send Money</string>
   <string name="title_account">Account</string>
   <string name="title_settings">Settings</string>
+  <string name="title_phone_number">Phone number</string>
 
   <string name="info_tab_title">Info</string>
   <string name="transactions_tab_title">Transactions</string>
@@ -120,6 +115,9 @@
   <string name="bitcoin_address_title">Bitcoin Address</string>
   <string name="account_title">Account</string>
   <string name="contacts_title">Contacts</string>
+
+
+  <string name="back">Back</string>
 
   <string name="sms_msg">Hi! I am trying to send you money via PayPro but I see you don\'t have an account. Can you download it so you can instantly have the money? It\'s available for iOS and Android :)</string>
 
