--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -118,7 +118,7 @@
 
   <string name="sms_msg">Hi! I am trying to send you money via PayPro but I see you don\'t have an account. Can you download it so you can instantly have the money? It\'s available for iOS and Android :)</string>
 
-  <string name="default_transaction_msg">Sent from PayPro App - download on the AppStore</string>
+  <string name="default_transaction_msg">Sent from PayPro App - It\'s available for iOS and Android</string>
 
   <string name="invite_dialog">This is not a PayPro user. Do you want to send an invite?</string>
   <string name="invite_dialog_title">Invite</string>
