--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
 
   <string name="continue_button">Continue</string>
 
-  <string name="slide_1_title">PayPro app</string>
+  <string name="slide_1_title" translatable="false">PayPro app</string>
   <string name="slide_1_desc">PayPro App is a free, safe and easy-to-use Bitcoin Wallet for spending and saving your preferred crypto-currency.</string>
 
   <string name="slide_2_title">Instant payments</string>
@@ -54,6 +54,10 @@
   <string name="title_account">Account</string>
   <string name="title_settings">Settings</string>
   <string name="title_phone_number">Phone number</string>
+  <string name="title_amount">Amount</string>
+  <string name="title_bitcoin_address">Bitcoin Address</string>
+  <string name="title_contacts">Contacts</string>
+  <string name="title_language">Choose Language</string>
 
   <string name="info_tab_title">Info</string>
   <string name="transactions_tab_title">Transactions</string>
@@ -69,6 +73,7 @@
 
   <string name="latest_transactions_header">LATEST TRANSACTIONS</string>
   <string name="passcode">Passcode</string>
+  <string name="language">Language</string>
   <string name="tell_a_friend">Tell a friend</string>
   <string name="info">Info</string>
   <string name="todo">TODO</string>
@@ -106,13 +111,6 @@
 
 
   <string name="choose_contact">Choose contact</string>
-
-  <string name="amount_title">Amount</string>
-  <string name="send_title">Send</string>
-  <string name="bitcoin_address_title">Bitcoin Address</string>
-  <string name="account_title">Account</string>
-  <string name="contacts_title">Contacts</string>
-
 
   <string name="back">Back</string>
 
