--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -144,7 +144,10 @@
 
   <string name="no_results">No results for \"%1$s\"</string>
 
-
+s
   <string name="force_update">You need to update the app in order to keep using it</string>
-  <string name="optional_update">There is a newer version of the app. Do you want to update?</string>
+  <string name="optional_update">A new version of the app is available. Do you want to update?</string>
+
+  <string name="update">Update</string>
+  <string name="next_time">Next time</string>
 </resources>
